5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1573_2896.log
== TEST (2019-03-13 14:20:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("elaine harada")

# Impressao de saidas
print(var())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("elaine harada")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:21:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("elaine harada:")

# Impressao de saidas
print(var())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("elaine harada:")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:21:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("Elaine Harada:")

# Impressao de saidas
print(var())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("Elaine Harada:")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:22:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("Elaine Harada:")

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("Elaine Harada:")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:22:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Elaine Harada:")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Elaine Harada:")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.154904
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
